# alice

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  SKILL.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.devflow/: config.toml  state.toml
.devflow/prompts/: implement-sdd.md
crates/alice/: Cargo.toml
crates/alice-core/: Cargo.toml
crates/alice-providers/: Cargo.toml
crates/alice-providers/src/: anthropic.rs  traits.rs
crates/alice-providers/tests/: anthropic_live_test.rs  anthropic_test.rs
crates/alice-tools/: Cargo.toml
crates/alice/src/: main.rs
crates/alice/tests/: cli_loop_test.rs
docs/: alice-design.md
docs/completion/: COMPLETION-0ebcdf37.md  COMPLETION-30955cc5.md  COMPLETION-38f782cc.md  COMPLETION-3bc87e1a.md  COMPLETION-4594c98e.md  COMPLETION-79b17a86.md  COMPLETION-82c3af0d.md  COMPLETION-da25c8a4.md
docs/debug/: COMPLETION-30955cc5.md  COMPLETION-a108d133.md  HYPOTHESIS-30955cc5.md  HYPOTHESIS-a108d133.md  PATTERN-30955cc5.md  PATTERN-a108d133.md  ROOT-CAUSE-30955cc5.md  ROOT-CAUSE-a108d133.md  VERIFICATION-30955cc5.md  VERIFICATION-a108d133.md
docs/evidence/: EVIDENCE-38f782cc.md  EVIDENCE-3bc87e1a.md  EVIDENCE-79b17a86.md
docs/features/: FEAT-0ebcdf37.md  FEAT-0fd4b318.md  FEAT-30955cc5.md  FEAT-38f782cc.md  FEAT-3bc87e1a.md  FEAT-4594c98e.md  FEAT-79b17a86.md  FEAT-82c3af0d.md  FEAT-da25c8a4.md
docs/requirements/: REQ-0ebcdf37.md  REQ-0fd4b318.md  REQ-30955cc5.md  REQ-38f782cc.md  REQ-3bc87e1a.md  REQ-4594c98e.md  REQ-79b17a86.md  REQ-82c3af0d.md  REQ-da25c8a4.md
src/: index.ts
tests/: world.test.ts
(+76 files in other folders)
